--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "express-hbs": "*",
+    "express-handlebars": "~1.1.0",
     "superagent": "0.14.6",
-    "passport": "*",
-    "passport-local": "*",
-    "mongoose" : "*"
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
+    "mongoose" : "~3.8.0"
   }
 }
