--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "superagent": "0.14.6",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
-    "mongoose" : "~3.8.0"
+    "mongoose": "~3.8.0",
+    "nodemailer": "~1.3.0",
+    "express-validator": "~2.6.0"
   }
 }
